knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Owner__c/Corporate_Entity_Owner__c.object-meta.xml
<CustomObject>
    <label>Corporate Entity Owner</label>
    <nameField>
        <displayFormat>CE(A)-{000000}</displayFormat>
        <label>Corporate Owner Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporate Entity Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>