knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Owner__c/fields/Corp_Entities_Owner__c.field-meta.xml
<CustomField>
    <fullName>Corp_Entities_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate Entities Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Corporate_Entity_Owner_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>