knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Owner__c/fields/Owned_Corporate_Entity__c.field-meta.xml
<CustomField>
    <fullName>Owned_Corporate_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owned Corporate Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Corporate_Entity_Owner_Details2</relationshipName>
    <type>Lookup</type>
</CustomField>