knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Owner__c/fields/Professional_Owner__c.field-meta.xml
<CustomField>
    <fullName>Professional_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Professional Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Corporate_Entity_Owner_Details</relationshipName>
    <type>Lookup</type>
</CustomField>