knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Owner__c/fields/Third_Party_Owner__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Corporate_Entity_Owner_Details</relationshipName>
    <type>Lookup</type>
</CustomField>