knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Owner__c/recordTypes/Corporate_Entity_Owner_Detail.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Entity_Owner_Detail</fullName>
    <active>true</active>
    <label>Corporate Entity Owner Detail</label>
</RecordType>